Final Version 1.0. Issues - OutOfMemoryError